--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   flex: 100%;
   margin-top: 1rem;
   border-radius: 10px;
+  border:none;
 }
 .card-list {
 column-count: 4;
@@ -11,21 +12,28 @@ margin:1rem 5rem 5rem 5rem;
 }
 .card {
   display: flex;
+  border:none;
 }
 .flex-container{
   display:flex;
-  justify-content: space-between;
+  justify-content:space-around;
   align-items: center;
   flex-wrap: wrap;
-  width:50%;
-  height:70vh;
+  height:500px;
+  padding:5rem;
 }
-.flex-img-container{
-  flex:.6;
-  border: 1px solid;
-  height: 50vh;
-  overflow: hidden;
+.image{
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
 }
+.container-img{
+  width: 300px;        
+  border: 5px solid black;
+}
+
+
+
 
 .img{
     max-width: inherit;
@@ -39,6 +47,7 @@ margin:1rem 5rem 5rem 5rem;
 
 .flex-details{
   flex: .4;
+  padding:1rem;
 }
 .card--image {
   flex: 100%;
@@ -53,7 +62,7 @@ border-radius: 5px;
 border:2px solid gray;
 }
 
-@media (min-width: 768px) and (max-width:1080px) {
+@media (max-width: 768px) {
 .form {
   grid-template-columns: auto 1fr auto;
   grid-gap: 1rem;
@@ -74,9 +83,10 @@ margin:0rem 0rem;
 padding:1rem 0rem;
 border-radius: 0px;
 }
+
 }
 
-@media only screen and (min-width:360px) and (max-width: 600px) {
+@media only screen and (max-width:360px) {
   .card-list {
       column-count: 1;
       margin:0px 1rem;
@@ -91,5 +101,6 @@ border:2px solid grey;
 margin:0;
 padding:1rem;
 }
+
 }
 
